# Solemnte1-fastapi-time

./: README.md
.github/workflows/: main.yml
Diego_Oyarzo_Javiera_Sobarzo/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_main.py
