[project]
name = "taller-fastapi-time"
version = "0.1.0"
description = "API con FastAPI para mostrar la hora del sistema"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "ntplib>=0.4.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
